# active-recall-generator

./: .env.example  .gitignore  ANALYTICS_DATA_GUIDE.md  ANALYTICS_DOCUMENTATION_INDEX.md  ANALYTICS_EXECUTIVE_SUMMARY.md  ANALYTICS_IMPLEMENTATION_COMPLETE.md  ANALYTICS_MOCK_DATA_README.md  ANALYTICS_START_HERE.md  ANALYTICS_VERIFICATION.md  ARCHITECTURE.md  COMPONENT_CONNECTIVITY.md  DELIVERABLES.md  FIXES_SUMMARY.md  GEMINI.MD  INTEGRATION_FIXES.md  MOCK_DATA_USAGE_GUIDE.md  PROJECT_PREVIEW.md  PROJECT_REVIEW.md  README.md  REVIEW_COMPLETION.md  SPEC.md  STUDY_UX_SPEC.md  TODO.md  VERIFICATION_CHECKLIST.md  export_chapter.py  main.py  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  render.yaml  repro_analytics.js  tailwind.config.ts  test_input.md  test_stream.py
.vercel/: project.json
app/: globals.css  layout.tsx  page.tsx
app/actions/: artifacts.ts  auth.ts  study.ts
app/analytics/: analytics-client.tsx  page.tsx
app/artifacts/: artifacts-client.tsx  page.tsx
app/forgot-password/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
app/reset-password/: page.tsx
app/study/: page.tsx  study-client.tsx
components/: nav.tsx  pipeline-status.tsx
components/analytics/: stats-overview.tsx  (+6 more)
docs/: needed-backend.md  needed-build-ui.md  pipeline-optimization-reference.md
hooks/: use-pipeline-orchestrator.ts  use-pipeline-sse.ts
lib/: api-client.ts  api-errors.ts  artifact-utils.ts  mock-analytics-data.ts
notebooks/: 01_single_chunk_debug.ipynb  02_full_pipeline_run.ipynb
scripts/: analyze_benchmarks.py  benchmark_pipeline.py  clear-build-cache.sh  clear-cache.js  fincare_benchmark.py  health_check.py
supabase/: config.toml
tests/: conftest.py  test_cli.py  test_database.py  test_fincare_benchmark.py  test_llm.py  test_models.py  test_models_v2.py  test_pipeline_nodes.py  test_processing.py  test_token_tracker.py
(+182 files in other folders)
